-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.32 2007-07-03 03:40:20 guru Exp $
-----------------------------------------------------------------------------------------

2007-06-29	remko
	* makefile.guru:	New system to make manpages
	* guru/{pdf,web}man.sh:	---"---
	* www/gmt/gmt_{man,suppl,services}.html:	No longer made from shell scripts
				or makefiles. Now part of CVS.

2007-06-28	pwessel
	* src/gredit.c:		-N did not take into account -fg if given
	* src/gmt_map.c:	Great circle intersection did not select correct vector sign so
				points 180 degrees from a line could pass as close in gmtselect

2007-06-28	remko
	* src/ps2raster.c:	Save temporary script with unique file name (<psfile>_tmp.bat) so
				that several ps2raster jobs can run concurrently.
2007-06-27	remko
	* src/grdlandmask.c:	Fixed bug introduced on 2007-06-24 in determining wrapped grid index

2007-06-26	pwessel
	* src/grdmask.c:	SEGV error when GMT_fix_up_path returned fewer points
				than originally allocated (n_alloc) and n_alloc was not reduced.
	* src/gmt_support.c:	-A<value> would turn off the expected default transparency

2007-06-24	pwessel
	* src/grdlandmask.c:	Failed to set rightmost, empty bin if 360-periodicity in effect;
				also needed to set repeating right column to left column

2007-06-16	pwessel
	* src/grdmath.c:	Added CBAZ as Cartesian complement to SBAZ

2007-06-11	remko
	* configure.in:		Changed LESS to PAGER as recommended by SAITO Fuyuki
	* GMT.in:		Use ${PAGER:-@PAGER@} for pager
	* src/makefile:		Make GMT also target of init:

2007-06-08	remko
	* GMT_Appendix_C.tex:	Added mention of ps2raster -P.
	* GMT_Appendix_N.tex:	Changed wording about using pattern fills in symbols.
				No longer created out of GMT_Appendix_N_main.tex, instead include
				GMT_Appendix_N_inc.tex created by scripts/GMT_App_N.sh
	* scripts/GMT_App_N.sh:	Created GMT_Appendix_N_inc.tex instead of altering GMT_Appendix_N.tex